# JTrade

./: README.md  package-lock.json
trader-journal/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
trader-journal/otchet/: ReportHistory-112079.html  ReportTrade-112079.html  Копия vantage _ invest.xlsx
trader-journal/scripts/: genAdviceChunks.mjs
trader-journal/src/: App.svelte  app.css  main.js
trader-journal/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
trader-journal/src-tauri/capabilities/: default.json
trader-journal/src-tauri/icons/: README.md  icon.icns
trader-journal/src-tauri/permissions/: allow-attachments.toml  allow-fetch-market.toml
trader-journal/src-tauri/src/: lib.rs  main.rs
trader-journal/src/components/: AchievementUnlockBanner.svelte  AddImageModal.svelte  AnalyticsView.svelte  BiasModal.svelte  DailyReviewModal.svelte  DayJournalView.svelte  GlobalContextMenu.svelte  GlossaryTermPopover.svelte  GlossaryView.svelte  GoalsView.svelte  GuideView.svelte  ImageCropModal.svelte  ImageLightbox.svelte  JournalSettingsModal.svelte  JournalSourceHint.svelte  JournalTourOverlay.svelte  JournalTourProgressModal.svelte  Modal.svelte  OnboardingJournalModal.svelte  PairPicker.svelte  PlaybookView.svelte  ProfileAccountsTab.svelte  ProfileAchievementsTab.svelte  ProfileGoalsTab.svelte  ProfileLimitsForm.svelte  ProfileModal.svelte  ProfileOwnRulesSection.svelte  ProfileRuleCardFields.svelte  ProfileRulesBlock.svelte  ProfileRulesTab.svelte  RiskConfirmModal.svelte  RiskHud.svelte  (+4 more)
(+78 files in other folders)
